# mlflow-k8s

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
infra/: 01_setting.tf  02_serviceaccount.tf  03_gke.tf  04_deployment.tf  05_network.tf  06_iap.tf  07_storage.tf  08_database.tf
infra/manifests/: backend_config.yaml  managed_certificate.yaml
scripts/: .env.example  Makefile  pyproject.toml  tracking_sample.py
