[tool.poetry]
name = "mlflow-k8s"
version = "0.1.0"
description = "An easy-to-use platform to track experiments, flexible more users."
authors = ["chck"]

[tool.poetry.dependencies]
python = "^3.8"
gevent = "^21.1.2"
psycopg2-binary = "^2.8.6"
google-cloud-storage = "^1.38.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
